# wisdomgarden

./: .gitignore  GUIDE.md  README.md  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: database.py  exceptions.py
backend/app/models/: order.py
backend/app/repositories/: order_repository.py
backend/app/routers/: catalog.py  checkout.py  orders.py
backend/app/schemas/: checkout.py  order.py
backend/app/services/: checkout_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_catalog.py  test_checkout.py  test_orders.py
docs/plans/: 2026-04-07-fullstack-design.md  2026-04-07-shopping-cart-design.md
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/router/: index.ts
frontend/src/stores/: cartStore.ts  orderStore.ts
frontend/src/views/: CartView.vue  OrdersView.vue
openspec/changes/fullstack-shopping-cart/: tasks.md
openspec/changes/shopping-cart-checkout/: proposal.md  tasks.md
openspec/specs/cart-calculation/: spec.md
openspec/specs/cart-ui/: spec.md
openspec/specs/catalog-api/: spec.md
openspec/specs/checkout-api/: spec.md
openspec/specs/input-parsing/: spec.md
openspec/specs/orders-api/: spec.md
openspec/specs/orders-ui/: spec.md
shopping_cart/: calculator.py  cart.py  main.py  parser.py
shopping_cart/domain/: cart_item.py  category.py  coupon.py  product.py  promotion.py
tests/integration/: test_cases.py
tests/unit/: test_calculator.py  test_domain.py  test_parser.py
(+14 files in other folders)
